Adds styles.css, fixes length for table output in index

--- a/index.qmd
+++ b/index.qmd
@@ -165,10 +165,10 @@ reviews
 #| eval: true 
 import mall 
 import polars as pl
-
+pl.Config(fmt_str_lengths=100)
 data = mall.MallData
-
 reviews = data.reviews
+
 reviews 
 ```
 :::
