Makes sure that the pl.Config line fixes output for examples

--- a/reference/MallFrame.qmd
+++ b/reference/MallFrame.qmd
@@ -81,6 +81,7 @@ Use an LLM to run a sentiment analysis
 ```{python}
 import mall
 import polars as pl
+pl.Config(fmt_str_lengths=100)
 data = mall.MallData
 reviews = data.reviews
 reviews.llm.use(options = dict(seed = 100), _cache = "_readme_cache")
