Moves setup code to the top, re renders

--- a/reference/MallFrame.qmd
+++ b/reference/MallFrame.qmd
@@ -5,6 +5,19 @@
 Extension to Polars that add ability to use
 an LLM to run batch predictions over a data frame
 
+Loads the neede libraries, and sets up the review
+data frame that will be used in the examples below:
+
+```{python}
+#| output: false
+import mall
+import polars as pl
+pl.Config(fmt_str_lengths=100)
+data = mall.MallData
+reviews = data.reviews
+reviews.llm.use(options = dict(seed = 100))
+```
+
 ## Methods
 
 | Name | Description |
@@ -79,12 +92,6 @@ Use an LLM to run a sentiment analysis
 #### Examples
 
 ```{python}
-import mall
-import polars as pl
-pl.Config(fmt_str_lengths=100)
-data = mall.MallData
-reviews = data.reviews
-reviews.llm.use(options = dict(seed = 100), _cache = "_readme_cache")
 reviews.llm.sentiment("review")
 ```
 
