Adds examples to classify

--- a/reference/MallFrame.qmd
+++ b/reference/MallFrame.qmd
@@ -45,6 +45,22 @@ Classify text into specific categories.
 | `pred_name`  | str    | A character vector with the name of the new column where the prediction will be placed                                  | `'classify'` |
 | `additional` | str    | Inserts this text into the prompt sent to the LLM                                                                       | `''`         |
 
+#### Examples
+
+```{python}
+reviews.llm.classify("review", ["appliance", "computer"])
+```
+
+```{python}
+# Use 'pred_name' to customize the new column's name 
+reviews.llm.classify("review", ["appliance", "computer"], pred_name="prod_type")
+```
+
+```{python}
+#Pass a DICT to set custom values for each classification
+reviews.llm.classify("review", {"appliance" : "1", "computer" : "2"})
+```
+
 ### custom { #mall.MallFrame.custom }
 
 `MallFrame.custom(col, prompt='', valid_resps='', pred_name='custom')`
