--- a/reference/MallFrame.qmd
+++ b/reference/MallFrame.qmd
@@ -171,3 +171,28 @@ interact with the LLM.
 | `model`    | str    | The name of the model tha the backend should use. At the beginning of the session it defaults to "llama3.2". If passing `""`, it will remain unchanged | `''`            |
 | `_cache`   | str    | The path of where to save the cached results. Passing `""` disables the cache                                                                          | `'_mall_cache'` |
 | `**kwargs` |        | Arguments to pass to the downstream Python call. In this case, the `chat` function in `ollama`                                                         | `{}`            |
+
+#### Examples
+
+```{python}
+# Additional arguments will be passed 'as-is' to the
+# downstream R function in this example, to ollama::chat()
+reviews.llm.use("ollama", "llama3.2", seed = 100, temp = 0.1)
+```
+
+```{python}
+# During the Python session, you can change any argument
+# individually and it will retain all of previous
+# arguments used
+reviews.llm.use(temp = 0.3)
+```
+
+```{python}
+# Use _cache to modify the target folder for caching
+reviews.llm.use(_cache = "_my_cache")
+```
+
+```{python}
+# Leave _cache empty to turn off this functionality
+reviews.llm.use(_cache = "")
+```
