Figures how to modify some elements of the tables, updates site

--- a/index.qmd
+++ b/index.qmd
@@ -162,10 +162,16 @@ reviews
 ## Python
 
 ```{python}
-#| eval: true 
-import mall 
+#| include: false
 import polars as pl
 pl.Config(fmt_str_lengths=100)
+pl.Config.set_tbl_hide_dataframe_shape(True)  
+pl.Config.set_tbl_hide_column_data_types(True)
+```
+
+
+```{python}
+import mall 
 data = mall.MallData
 reviews = data.reviews
 
