--- a/reference/MallFrame.qmd
+++ b/reference/MallFrame.qmd
@@ -13,6 +13,8 @@ data frame that will be used in the examples below:
 import mall
 import polars as pl
 pl.Config(fmt_str_lengths=100)
+pl.Config.set_tbl_hide_dataframe_shape(True)  
+pl.Config.set_tbl_hide_column_data_types(True)
 data = mall.MallData
 reviews = data.reviews
 reviews.llm.use(options = dict(seed = 100))
