Switches to parenthesis for string concatenation

--- a/reference/MallFrame.qmd
+++ b/reference/MallFrame.qmd
@@ -81,7 +81,12 @@ Provide the full prompt that the LLM will process.
 #### Examples
 
 ```{python}
-my_prompt = "Answer a question."         + "Return only the answer, no explanation"         + "Acceptable answers are 'yes', 'no'"         + "Answer this about the following text, is this a happy customer?:"
+my_prompt = (
+    "Answer a question."
+    "Return only the answer, no explanation"
+    "Acceptable answers are 'yes', 'no'"
+    "Answer this about the following text, is this a happy customer?:"
+)
 
 reviews.llm.custom("review", prompt = my_prompt)
 ```
