--- a/r/README.Rmd
+++ b/r/README.Rmd
@@ -24,8 +24,8 @@ mall::llm_use("ollama", "llama3.2", seed = 100, .cache = "_readme_cache")
 <img src="man/figures/favicon/apple-touch-icon-180x180.png" style="float:right" />
 
 <!-- badges: start -->
-[![R-CMD-check](https://github.com/edgararuiz/mall/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/edgararuiz/mall/actions/workflows/R-CMD-check.yaml)
-[![Codecov test coverage](https://codecov.io/gh/edgararuiz/mall/branch/main/graph/badge.svg)](https://app.codecov.io/gh/edgararuiz/mall?branch=main)
+[![R-CMD-check](https://github.com/mlverse/mall/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/mlverse/mall/actions/workflows/R-CMD-check.yaml)
+[![Codecov test coverage](https://codecov.io/gh/mlverse/mall/branch/main/graph/badge.svg)](https://app.codecov.io/gh/mlverse/mall?branch=main)
 [![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
 <!-- badges: end -->
 
@@ -69,7 +69,7 @@ This saves the data scientist the need to write and tune an NLP model.
 
 - Install `mall` from Github
   ```r
-  pak::pak("edgararuiz/mall")
+  pak::pak("mlverse/mall")
   ```
 
 ### With local LLMs
@@ -90,7 +90,7 @@ automatically use Databricks' LLM instead of Ollama. *You won't need Ollama
 installed if you are using Databricks only.*
 
 `mall` will call the appropriate SQL AI function. For more information see our 
-[Databricks article.](https://edgararuiz.github.io/mall/articles/databricks.html) 
+[Databricks article.](https://mlverse.github.io/mall/articles/databricks.html) 
 
 ## LLM functions
 
