--- a/index.qmd
+++ b/index.qmd
@@ -23,6 +23,15 @@ mall::llm_use("ollama", "llama3.2", seed = 100, .cache = "_readme_cache")
 
 <img src="figures/favicon/apple-touch-icon-180x180.png" style="float:right" />
 
+<!-- badges: start -->
+
+[![R package check](https://github.com/mlverse/mall/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/mlverse/mall/actions/workflows/R-CMD-check.yaml)
+[![R package coverage](https://codecov.io/gh/mlverse/mall/branch/main/graph/badge.svg)](https://app.codecov.io/gh/mlverse/mall?branch=main)
+[![Lifecycle:
+experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
+<!-- badges: end -->
+
+
 Run multiple LLM predictions against a data frame. The predictions are processed 
 row-wise over a specified column. It works using a pre-determined one-shot prompt,
 along with the current row's content. `mall` has been implemented for both R
